# AIAgents3997-HW8

./: .env.example  .git-workflow-state.json  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: Architecture.md  BUDGET.md  BUILDING_BLOCKS_REVIEW.md  CONFIG.md  CONTRIBUTING.md  COSTS.md  ENVIRONMENT.md  EXAMPLE.md  EXTENSIBILITY.md  IMPROVEMENT_PLAN.md  PRD.md  PROMPT_BOOK.md  RESEARCH.md  SECURITY.md  UX_UI_ANALYSIS.md
docs/ADRs/: ADR-001-excel-database.md  ADR-002-5-stage-mcp.md
docs/development/: FINAL_CHECKLIST.md  GIT_WORKFLOW.md  PROMPT_LOG.md  QUALITY_STANDARD.md
src/: __init__.py
src/ai_agent/: __init__.py  pdf_generator.py  reporter.py
src/communication/: __init__.py  base.py  http_client.py
src/config/: __init__.py  loader.py  validator.py
src/database/: __init__.py  excel_manager.py  excel_operations.py  history_manager.py  models.py  queries.py  validators.py
src/exceptions/: __init__.py  base.py
src/logging_config/: __init__.py  logger.py
src/mcp_server/: __init__.py  prompt_templates.py  prompts.py  resources.py  server.py  tools.py
src/sdk/: __init__.py  client.py
src/web_ui/: __init__.py  backend.py  routes.py
src/web_ui/static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_ai_agent.py  test_communication.py  test_config.py  test_database.py  test_exceptions.py  test_logging.py  test_mcp_server.py  test_sdk.py  test_web_ui.py
